ubuntu/config/kong/iptables-save
# Generated by iptables-save v1.6.0 on Thu Sep 21 17:54:54 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [129:7989]
:TCP - [0:0]
# accept connected packets
-A INPUT -p tcp -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# accept loopback
-A INPUT -i lo -j ACCEPT
# drop invalid state packets
-A INPUT -m conntrack --ctstate INVALID -j DROP
# ICMP type 8 is accepted for ping
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
# TCP packets accepted
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
# UDP packets rejected
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
# only connection established outputs
-A OUTPUT -p udp -j DROP
-A OUTPUT -m conntrack --ctstate NEW,RELATED,ESTABLISHED -j ACCEPT
# 8000 8001 port open for kong
-A TCP -p tcp -m tcp --dport 8000 -j ACCEPT
-A TCP -p tcp -m tcp --dport 8001 -j ACCEPT
# 22 port open for ssh
-A TCP -p tcp -m tcp --dport 22 -j ACCEPT

COMMIT
# Completed on Thu Sep 21 17:54:54 2017
